# Simple-State-Machine

./: .gitignore  CMakeLists.txt  Makefile  readMe.md  simpleStateMachine.hpp  testJson  testJson.cpp  testZmq  testZmq.cpp  testZmq2  testZmq2.cpp
basicState/: basicState.hpp
config/: service.json
docker/: Dockerfile
example/: Makefile  example.cpp  example_helper  example_socket.cpp  example_socket_helper.cpp  example_zmq.cpp  example_zmq_helper.cpp
simperLogger/: simpleLogger.hpp
simpleLogger/: simpleLogger.hpp
stateManager/: stateManager.cpp  stateManager.hpp
utilities/: heapVec.hpp  queueBuffer.hpp
